Implementando autenticacao e geracao do token JWT

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.profiles.active=test
 
 default.sender=safeface.app@gmail.com
 defaut.recipient=safeface.app@gmail.com
+
+jwt.secret=KungFuryHackerManTimeTravel80
+jwt.expiration=60000
