--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -3,8 +3,8 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=
 
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
 
 spring.mail.host=smtp.gmail.com
 spring.mail.username=
