Salvando primeiro arquivo no S3

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,9 @@ default.sender=safeface.app@gmail.com
 defaut.recipient=safeface.app@gmail.com
 
 jwt.secret=KungFuryHackerManTimeTravel80
-jwt.expiration=60000
+jwt.expiration=86400000
+
+aws.access_key_id=
+aws.secret_access_key=
+s3.bucket=pepperserver
+s3.region=sa-east-1
